réalisatoin d'une partie des méthodes spéciales